New fonts added

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -48,7 +48,7 @@ under the License.
       </span>
     </a>
     <div class="tocify-wrapper">
-      <%= image_tag "logo.png" %>
+      <img src="/images/logo.svg" style="height: 55px;width:auto;margin: 16px auto;" />
       <% if language_tabs %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
