--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -48,7 +48,7 @@ under the License.
       </span>
     </a>
     <div class="tocify-wrapper">
-      <img src="/images/logo.svg" style="height: 44px;width:auto;margin: 16px auto;" />
+      <img src="/images/logo.svg" style="height: 34px;width:auto;margin: 10px auto 16px auto;" />
       <% if language_tabs %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
