--- a/source/stylesheets/_icon-font.scss
+++ b/source/stylesheets/_icon-font.scss
@@ -12,36 +12,36 @@
 
 @font-face {
   font-family: 'nexa_regular';
-  src: url('/fonts/nexaregular-webfont.eot');
-  src: url('/fonts/nexaregular-webfont.eot?#iefix') format('embedded-opentype'),
-    url('/fonts/nexaregular-webfont.woff2') format('woff2'),
-    url('/fonts/nexaregular-webfont.woff') format('woff'),
-    url('/fonts/nexaregular-webfont.ttf') format('truetype'),
-    url('/fonts/nexaregular-webfont.svg#nexa_regular') format('svg');
+  src: url('/slate/fonts/nexaregular-webfont.eot');
+  src: url('/slate/fonts/nexaregular-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/slate/fonts/nexaregular-webfont.woff2') format('woff2'),
+    url('/slate/fonts/nexaregular-webfont.woff') format('woff'),
+    url('/slate/fonts/nexaregular-webfont.ttf') format('truetype'),
+    url('/slate/fonts/nexaregular-webfont.svg#nexa_regular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'nexa_light';
-  src: url('/fonts/nexalight-webfont.eot');
-  src: url('/fonts/nexalight-webfont.eot?#iefix') format('embedded-opentype'),
-    url('/fonts/nexalight-webfont.woff2') format('woff2'),
-    url('/fonts/nexalight-webfont.woff') format('woff'),
-    url('/fonts/nexalight-webfont.ttf') format('truetype'),
-    url('/fonts/nexalight-webfont.svg#nexa_light') format('svg');
+  src: url('/slate/fonts/nexalight-webfont.eot');
+  src: url('/slate/fonts/nexalight-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/slate/fonts/nexalight-webfont.woff2') format('woff2'),
+    url('/slate/fonts/nexalight-webfont.woff') format('woff'),
+    url('/slate/fonts/nexalight-webfont.ttf') format('truetype'),
+    url('/slate/fonts/nexalight-webfont.svg#nexa_light') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'nexa_bold';
-  src: url('/fonts/nexabold-webfont.eot');
-  src: url('/fonts/nexabold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('/fonts/nexabold-webfont.woff2') format('woff2'),
-    url('/fonts/nexabold-webfont.woff') format('woff'),
-    url('/fonts/nexabold-webfont.ttf') format('truetype'),
-    url('/fonts/nexabold-webfont.svg#nexa_bold') format('svg');
+  src: url('/slate/fonts/nexabold-webfont.eot');
+  src: url('/slate/fonts/nexabold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/slate/fonts/nexabold-webfont.woff2') format('woff2'),
+    url('/slate/fonts/nexabold-webfont.woff') format('woff'),
+    url('/slate/fonts/nexabold-webfont.ttf') format('truetype'),
+    url('/slate/fonts/nexabold-webfont.svg#nexa_bold') format('svg');
   font-weight: normal;
   font-style: normal;
 }
